# Spring_Financial

./: .gitignore  README.md  dataloader.py  inference.py  main.py  pyproject.toml  train.py
Data/: classification_dataset.csv
Data/Pre_Processed/: final_df.csv  final_df_not_qt.csv  final_df_not_qt_with_corr.csv  final_df_with_corr.csv  unprocessed_data.csv
Models/: LogisticRegression.pkl  Network_v1_binary.pt  SVC_kernel_linear.pkl  SVC_kernel_poly_deg_2.pkl  catboost_depth3_iter250_lr0.05.pkl  lightgbm_depth3_estimators250_lr0.05.pkl  randomforest_depth7_estimators250.pkl  xgboost_depth3_estimators250_lr0.05.pkl
Notebooks/: Modelling_experiments.ipynb  Preprocess_experiments.ipynb  experiments.ipynb
Notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Notebooks/catboost_info/learn/: events.out.tfevents
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
